18702
{code}
scala> class ann extends scala.annotation.StaticAnnotation
defined class ann

scala> trait T { @ann type X }
defined trait T

scala> type T = { @ann type X }
<console>:1: error: illegal start of declaration
       type T = { @ann type X }
                  ^

scala> class T { @ann def x: Int = ??? }
defined class T

scala> type T = { @ann def x: Int }
<console>:1: error: illegal start of declaration
       type T = { @ann def x: Int }
                  ^
{code}
